--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs-extra": "^11.2.0",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
+    "oauth": "^0.9.15",
     "oauth-1.0a": "^2.2.6",
     "querystring": "^0.2.1",
     "twitter": "^1.7.1"
